@@ -15,14 +15,6 @@ export const enum Settings {
   EntityInfoLocation = "bp100_entity-info-location",
   GpsTagTeleport = "bp100_gps-tag-teleport",
   UnhideInfinityItems = "bp100_unhide-infinity-items",
-
-  FlexibleOffshorePumpPlacement = "bp100_flexible-offshore-pump-placement",
-}
-
-// noinspection JSUnusedGlobalSymbols
-export enum FlexibleOffshorePumpPlacement {
-  Disabled = "disabled",
-  Enabled = "anywhere",
 }
 
 export const enum Prototypes {
